--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-@import url();
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
-:root{
-    --text-color--:#DF927D;
-    
+body{
+    font-family: "Poppins", sans-serif;
 }
