--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ p{
     margin-bottom: 15px;
 }
 
-@media(max-width: 991px;) {
+@media(max-width: 991px) {
     .menu{
         padding: 30px;
     }
@@ -327,7 +327,7 @@ p{
         padding: 100px 30px;
     }
 
-    .header-content p{
+    .header-content p {
         padding: 0;
     }
 
