--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    max-height: 1150px;
+    min-height: 70vh;
     display: flex;
     align-items: center;
     width: 1520px;
@@ -105,7 +105,7 @@ body{
 }
 
 .primersec {
-    padding: 100px 0;
+    padding: 50px 0;
     background-color: #e1e2e6;
     position: relative;
 }
