--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ body{
 .txt-p{
     font-size: 16px;
     color: #414247;
-    padding: 0 250px;
+    padding: 100 250px;
     margin-bottom: 35px;
+    text-align: justify;
 }
 
 .primersec-group{
