--- a/style.css
+++ b/style.css
@@ -218,7 +218,51 @@ body{
     font-size: 18px;
 }
 
-.general{
+.segundasec {
+    padding: 300px 0;/*Tamaño de largo de la sección*/
+    background-color: #e1e2e6; /*Color del fondo de la sección*/
+    position: relative;
+}
+
+.segundasec-content h2 {
+    position: absolute;
+    top: 5%;
+    right: 600px;
+    font-size: 55px;
+    line-height: 70px; /*sangria*/
+    color: #323337;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.segundasec-content h3{
+    position: absolute;
+    top: 20%;
+    left: 50px;
+    font-size: 25px;
+    color: #323337;
+}
+
+.segundasec-content p{ /*Texto contenido Contacto*/
+    position: absolute;
+    top: 30%;
+    left: 50px;
+    font-size: 16px;
+    color: #414247;
+    text-align: left;
+
+}
+
+.segundasec-content iframe {
+    position: absolute;
+    top: 20%;
+    right: 50px;
+
+}
+
+
+    /*.general{
     display: flex;
 }
 
@@ -255,7 +299,7 @@ p{
     font-size: 16px;
     color: #414247;
     margin: 25px 0 45px 0;
-}
+}*/
 
 .blog{
     padding: 100px 0;
