--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ body{
     width: 500px;
     clip-path: circle(50%);
     opacity: 0.4;
-
 }
 
 .primersec-1 h3{
@@ -219,18 +218,40 @@ body{
 }
 
 .segundasec {
-    padding: 300px 0;/*Tamaño de largo de la sección*/
-    background-color: #e1e2e6; /*Color del fondo de la sección*/
     position: relative;
+    background-image: linear-gradient(
+        rgba(0,0,0,0.3),
+        rgba(0,0,0,0.3)),
+        url(images/margenc.avif);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;/*ajustar imagen al tamaño de la sección*/
+    padding: 330px 0;
 }
 
+/*.segundasec-margen{ 
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 139px;
+    opacity: 0.4;
+}
+
+.segundasec-margen2{
+    position: absolute;
+    top: 0;
+    left: 0px;
+    width: 139px;
+    opacity: 0.4;
+}
+*/
 .segundasec-content h2 {
     position: absolute;
     top: 5%;
     right: 600px;
     font-size: 55px;
     line-height: 70px; /*sangria*/
-    color: #323337;
+    color: black;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 15px;
@@ -239,16 +260,16 @@ body{
 .segundasec-content iframe {
     position: absolute;
     top: 20%;
-    right: 50px;
+    right: 250px;
 }
 
 .box .contenedorredsocial{ /*Posición iconos*/
     top: 30%;
     writing-mode: vertical-lr;
     position: absolute;
-    display: flex;
+    display: inline-block;
     justify-content: center;
-    left: 500px:
+    left: 400px;
     align-items: center;
 }
 
@@ -261,28 +282,28 @@ body{
 
 .contenedorredsocial .boton{
     display: inline-block;
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
     margin: 0 5px;
     overflow: hidden;
     background: #fff;
-    border-radius: 50px;
+    border-radius: 70px;
     cursor: pointer;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     transition: all .3s ease-out;
 }
 
 .contenedorredsocial .boton:hover{ /*largo de barra*/
-    width: 190px;
+    width: 200px;
 }
 
 .contenedorredsocial .boton .icono{
     display: inline-block;
-    height: 60px;
-    width: 60px;
-    border-radius: 50px;
+    height: 80px;
+    width: 80px;
+    border-radius: 70px;
     box-sizing: border-box;
-    line-height: 60px;
+    line-height: 80px;
     text-align: center;
     transition: all .3s ease-out;
 }
@@ -312,14 +333,14 @@ body{
 }
 
 .contenedorredsocial .boton i{
-    font-size: 25px;
-    line-height: 60px;
+    font-size: 40px;
+    line-height: 80px;
 }
 
 .contenedorredsocial .boton span{
     font-size: 20px;
     font-weight: 500;
-    line-height: 60px;
+    line-height: 80px;
     margin-left: center;
 }
 /*.general{
