--- a/style.css
+++ b/style.css
@@ -495,6 +495,11 @@ p{
         padding: 60px;
     }
 
+    .segundasec-content{
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
     .segundasec-content h2{
         padding: 0;
     }
