--- a/style.css
+++ b/style.css
@@ -507,11 +507,13 @@ p{
     .segundasec-content body{
         padding: 30px;
     }
-
-    .box{
-        padding: 30px;
+    
+    .segundasec-content iframe {
+        position: absolute;
+        top: 20%;
+        right: 250px;
     }
-
+    
     .contenedorredsocial{
         padding: 30px;
     }
