--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ body{
 
     .segundasec{
         position: relative;
-        padding: 150px;
+        padding: 100px;
     }
 
     .segundasec-content h2{
@@ -446,10 +446,10 @@ body{
     }
 
     .segundasec-content iframe{
-        width: 250px;
-        height: 200px;
+        width: 200px; /*ancho*/
+        height: 100px; /*largo*/
         top: 10%;
-        right: 70px;
+        right: 50px;
     }
 
     .box .contenedorredsocial{
@@ -460,6 +460,34 @@ body{
         justify-content: center;
         left: 4px;
         align-items: center;
+    }
+
+    .contenedorredsocial .boton{
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        margin: 0 5px;
+        overflow: hidden;
+        background: #fff;
+        border-radius: 70px;
+        cursor: pointer;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        transition: all .3s ease-out;
+    }
+    
+    .contenedorredsocial .boton:hover{ /*largo de barra*/
+        width: 50px;
+    }
+    
+    .contenedorredsocial .boton .icono{
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        border-radius: 70px;
+        box-sizing: border-box;
+        line-height: 80px;
+        text-align: center;
+        transition: all .3s ease-out;
     }
 
     .servises{
