--- a/style.css
+++ b/style.css
@@ -446,19 +446,19 @@ body{
     }
 
     .segundasec-content iframe{
-        width: 200px; /*ancho*/
-        height: 100px; /*largo*/
-        top: 10%;
-        right: 50px;
+        width: 250px; /*ancho*/
+        height: 200px; /*largo*/
+        top: 20%;
+        right: 70px;
     }
 
     .box .contenedorredsocial{
         top: 80%;
-        writing-mode: vertical-lr;
+        writing-mode: horizontal-tb;
         position: absolute;
         display: inline-block;
         justify-content: center;
-        left: 4px;
+        left: 150px;
         align-items: center;
     }
 
@@ -468,28 +468,40 @@ body{
         width: 20px;
         margin: 0 5px;
         overflow: hidden;
-        background: #fff;
-        border-radius: 70px;
+        background: hsl(0, 0%, 100%);
+        border-radius: 20px;
         cursor: pointer;
         box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
         transition: all .3s ease-out;
     }
     
     .contenedorredsocial .boton:hover{ /*largo de barra*/
-        width: 50px;
+        width: 15px;
     }
     
     .contenedorredsocial .boton .icono{
         display: inline-block;
         height: 20px;
         width: 20px;
-        border-radius: 70px;
+        border-radius: 20px;
         box-sizing: border-box;
-        line-height: 80px;
+        line-height: 10px;
         text-align: center;
         transition: all .3s ease-out;
     }
 
+    .contenedorredsocial .boton i{ /*Tamaño logo*/
+        font-size: 15px;
+        line-height: 0px;
+    }
+    
+    .contenedorredsocial .boton span{
+        font-size: 10px;
+        font-weight: 50;
+        line-height: 50px;
+        margin-left: center;
+    }
+    
     .servises{
         padding: 30px;
     }
