--- a/style.css
+++ b/style.css
@@ -166,8 +166,8 @@ body{
 
 .servises {
     background-image: linear-gradient(
-        rgba(0,0,0,0.2),
-        rgba(0,0,0,0.2)),
+        rgba(138, 194, 240, 0.2),
+        rgba(138, 194, 240, 0.2)),
         url(images/ser1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
