--- a/style.css
+++ b/style.css
@@ -355,26 +355,32 @@ body{
 }
 
 .footer{
-    padding: 100px 0;
+    padding: 5px;
     background-color: #000;
 }
 
 .footer-content{
     display: flex;
     justify-content: space-between;
+    text-align: center;
 }
 
-.link h3{
-    font-size: 18px;
-    color: #F9FAFC;
-    margin-bottom: 15px;
+.footer-content img{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    left: 550px;
+    bottom: 20px;
 }
 
 .link a{
+    position: relative;
+    text-decoration: underline;
     font-size: 16px;
     color: #c5c5c5;
     display: block;
-    margin-bottom: 15px;
+    left: 280px;
+    top: 11px;
 }
 
 @media(max-width: 991px) {
@@ -591,6 +597,25 @@ body{
     .footer-content{
         flex-direction: column;
         text-align: center;
+        top: 5%;
+    }
+
+    .footer-content img{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        left: 10px;
+        bottom: 0px;
+    }
+    
+    .link a{
+        position: relative;
+        text-decoration: underline;
+        font-size: 12px;
+        color: #c5c5c5;
+        display: block;
+        left: 10px;
+        top: 0px;
     }
 }
 
