--- a/style.css
+++ b/style.css
@@ -330,8 +330,19 @@ body{
 }
 
 .blog{
-    padding: 100px 0;
+    padding: 50px 0;
+    background-color: #f5daeb;
+    position: relative;
     text-align: center;
+}
+
+.blog h2 {
+    font-size: 55px;
+    line-height: 70px;
+    color: #323337;
+    text-transform: uppercase;
+    padding: 0 250px;
+    margin-bottom: 15px;;  
 }
 
 .blog-content{
@@ -340,13 +351,14 @@ body{
 }
 
 .blog-1{
-    padding: 15px 55px;
+    padding: 15px 150px 30px 150px;
 }
 
 .blog-1 img{
-    width: 250px;
+    width: 450px;
     border-radius: 15px;
     margin-bottom: 15px;
+    box-shadow: 0px 0px 50px 30px rgba(250, 14, 191, 0.2);
 }
 
 .blog-1 h3{
@@ -580,8 +592,18 @@ body{
     
     .blog{
         padding: 30px;
+        text-align: center;
     }
 
+    .blog h2 {
+        position: relative;
+        left: auto;
+        font-size: 45px;
+        line-height: 70px;
+        color: #323337;
+        text-transform: uppercase;  
+    }
+    
     .blog-content{
         flex-direction: column;
     }
@@ -590,6 +612,12 @@ body{
         padding: 0;
     }
 
+    .blog-1 img{
+        width: 250px;
+        border-radius: 15px;
+        margin-bottom: 15px;
+    }
+    
     .footer{
         padding: 30px;
     }
