--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ body{
 .segundasec-content h2 {
     position: absolute;
     top: 5%;
-    right: 400px;
+    right: 600px;
     font-size: 55px;
     line-height: 70px; /*sangria*/
     color: black;
@@ -435,7 +435,7 @@ body{
     bottom: 30px;
 }
 
-.container h2{
+.containers h2{
     position: relative;
     font-size: 55px;
     line-height: 70px;
@@ -443,7 +443,7 @@ body{
     justify-content: center;
     color: #323337;
     text-transform: uppercase;
-    padding: 15px 480px;
+    padding: 15px 620px;
     margin-bottom: 40px;
 }
 
@@ -794,6 +794,18 @@ body{
         width: 250px;
         border-radius: 15px;
         margin-bottom: 15px;
+    }
+    
+    .containers h2{
+        position: relative;
+        font-size: 40px;
+        line-height: 70px;
+        align-items: center;
+        justify-content: center;
+        color: #323337;
+        text-transform: uppercase;
+        padding: 15px 98px;
+        margin-bottom: 40px;
     }
     
     .footer{
