--- a/style.css
+++ b/style.css
@@ -391,11 +391,10 @@ body{
     margin-left: center;
 }
 
-.blog{
+.blog {
     padding: 50px 0;
-    background-color: #f5daeb;
+    background-color: #e1e2e6;
     position: relative;
-    text-align: center;
 }
 
 .blog h2 {
@@ -403,24 +402,21 @@ body{
     line-height: 70px;
     color: #323337;
     text-transform: uppercase;
-    padding: 0 250px;
+    padding: 0 550px;
     margin-bottom: 15px;;  
 }
 
 .blog-content{
-    display: flex;
-    justify-content: space-between;
-}
-
-.blog-1{
-    padding: 15px 150px 30px 150px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
 }
 
 .blog-1 img{
-    width: 450px;
+    width: 400px;
     border-radius: 15px;
+    border: .2rem solid #fc2e99;
     margin-bottom: 15px;
-    box-shadow: 0px 0px 50px 30px rgba(250, 14, 191, 0.2);
 }
 
 .blog-1 h3{
@@ -433,6 +429,7 @@ body{
     max-width: 900px;
     margin: 0 auto;
     bottom: 30px;
+    
 }
 
 .containers h2{
@@ -783,15 +780,13 @@ body{
     }
 
     .blog-content{
-        flex-direction: column;
-    }
-
-    .blog-1{
-        padding: 0;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        place-items: center;
     }
 
     .blog-1 img{
-        width: 250px;
+        width: 110px;
         border-radius: 15px;
         margin-bottom: 15px;
     }
