--- a/style.css
+++ b/style.css
@@ -808,6 +808,14 @@ body{
         padding: 15px 98px;
         margin-bottom: 40px;
     }
+
+    .slider-wrapper .slide-button#prev-slide{
+        left: -1px;
+    }
+    
+    .slider-wrapper .slide-button#next-slide{
+        right: -1px;
+    }
     
     .footer{
         padding: 30px;
