--- a/style.css
+++ b/style.css
@@ -683,17 +683,14 @@ body{
     .box .contenedorredsocial .boton a{ /*texto icono*/
         color:#080808;
         writing-mode: horizontal-tb;
-        text-decoration: dotted;
-        font-weight: bold;
     }
 
     .contenedorredsocial .boton{
         display: inline-block;
-        height: 40px;
-        width: 40px;
-        margin: 0 5px;
+        height: 38px;
+        width: 38px;
+        margin: 0px 5px;
         overflow: hidden;
-        background: hsl(0, 0%, 100%);
         border-radius: 20px;
         cursor: pointer;
         box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
@@ -701,29 +698,28 @@ body{
     }
     
     .contenedorredsocial .boton:hover{ /*largo de barra*/
-        width: 105px;
+        width: 110px;
     }
     
     .contenedorredsocial .boton .icono{
         display: inline-block;
-        height: 40px;
-        width: 40px;
-        border-radius: 20px;
+        height: 38px;
+        width: 38px;
+        border-radius: 30px;
         box-sizing: border-box;
         line-height: 10px;
-        text-align: center;
         transition: all .3s ease-out;
     }
 
     .contenedorredsocial .boton i{ /*Tamaño logo*/
-        font-size: 25px;
-        line-height: 40px;
+        font-size: 24px;
+        line-height: 32px;
     }
-    
+
     .contenedorredsocial .boton span{
-        font-size: 11px;
-        font-weight: 50;
-        line-height: 50px;
+        font-size: 10.5px;
+        font-weight: 10;
+        line-height: 8px;
         margin-left: center;
     }
     
